recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:13: error: ';' expected but 'else' found.
  else {
  ^PolygonFractal:25: error: expected start of definition
	override def run() {
                 ^PolygonFractal:29: error: Unmatched closing brace '}' ignored here
}
^